fixes ligth and dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,16 @@ body, html {
   overflow-x: hidden;
 }
 
+body, .light {
+  background-color: #f5f5f7;
+  color: #86a8e7;
+}
+
+body, .dark {
+  background-color: #1a1a1a;
+  color: #ffffff;
+}
+
 body::-webkit-scrollbar-track {
   background: linear-gradient(
     -225deg,
