--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -19,16 +19,6 @@
   }
 }
 
-.light .home {
-  background-color: #f5f5f7;
-  color: #86a8e7;
-}
-
-.dark .home {
-  background-color: #1a1a1a;
-  color: #ffffff;
-}
-
 .about {
   width: 100%;
   height: calc(100vh - 100px);
